--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container d-flex justify-content-center align-items-center w-100 h-100">
+      <a href="home.html"><button class="btn btn-primary" style="position: absolute;top: 160px;left: 250px;">Home</button></a>
         <div class="login-container d-flex justify-content-center align-items-center flex-column shadow-lg p-lg-5">
           <h2 class="mb-5 fs-2 fw-bold">Log in</h2>
           <div style="width: 90%; height: auto;">
